syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

option go_package = "./pb";

message Heartbeat {
  string hostname = 1;
  string ip = 2;
  string machine_id = 3;
  int64 pid = 4;
  google.protobuf.Timestamp sent_at = 5;
}

message Task {
  string uuid = 1;
  string heartbeat_uuid = 2;

  enum TaskType {
    NOOP = 0;
    CMD = 1;
    SCRIPT = 2;
  }
  TaskType type = 3;

  string payload = 4;
}

message TaskResponse {
  string uuid = 1;

  string stdout = 2;
  string stderr = 3;
}
